# OS

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  COMMERCIAL_LICENSE.md  LVGL_Features.md  LVGL_full_api_list.md  NOTICE  README.md  ROADMAP.md  fix_kernel_references.py  fix_services_namespace.py  flxos.py  partitions_16mb.csv  partitions_4mb.csv  partitions_8mb.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32_cyd  sdkconfig.defaults.esp32s3  sdkconfig.lvgl.defaults  update_core_includes.sh  update_kernel_namespaces.py  update_namespaces.py  update_services_references.py
Applications/: CMakeLists.txt
Applications/calendar/: CalendarApp.cpp  CalendarApp.hpp
Applications/files/: FilesApp.cpp  FilesApp.hpp
Applications/image_viewer/: ImageViewerApp.cpp  ImageViewerApp.hpp
Applications/settings/: SettingsApp.hpp  SettingsPageBase.hpp
Applications/settings/bluetooth/: BluetoothSettings.hpp
Applications/settings/display/: DisplaySettings.hpp
Applications/settings/hotspot/: HotspotSettings.hpp
Applications/settings/wifi/: WiFiSettings.hpp
Applications/system_info/: SystemInfoApp.cpp  SystemInfoApp.hpp
Applications/text_editor/: TextEditorApp.cpp  TextEditorApp.hpp
Applications/tools/: ToolsApp.cpp  ToolsApp.hpp
Applications/tools/implementation/: Calculator.cpp  Flashlight.cpp  Screenshot.cpp  Screenshot.hpp  Stopwatch.cpp
Apps/: CMakeLists.txt
Apps/Include/flx/apps/: App.hpp  AppContext.hpp  AppManager.hpp  AppManifest.hpp  AppRegistry.hpp  Bundle.hpp  EventBus.hpp  Intent.hpp
Apps/Source/: AppContext.cpp  AppManager.cpp  AppRegistry.cpp  Bundle.cpp  EventBus.cpp
Connectivity/: CMakeLists.txt
Connectivity/Include/flx/connectivity/: ConnectivityManager.hpp
Connectivity/Source/: ConnectivityManager.cpp
Connectivity/Source/bluetooth/: BluetoothManager.cpp
Connectivity/Source/hotspot/: HotspotManager.cpp
Connectivity/Source/wifi/: WiFiManager.cpp
Firmware/: CMakeLists.txt  Kconfig.projbuild
Firmware/Source/: Main.cpp
HAL/: CMakeLists.txt
HAL/Include/flx/hal/: lv_lgfx_user.hpp
HalModule/: CMakeLists.txt
HalModule/Include/flx/hal/: BusManager.hpp  DeviceBase.hpp  DeviceRegistry.hpp  HardwareCapabilities.hpp  IDevice.hpp
HalModule/Source/: BusManager.cpp  DeviceBase.cpp  DeviceRegistry.cpp
HalModule/Source/display/: LgfxDisplayDevice.cpp
HalModule/Source/gpio/: EspGpioController.cpp
HalModule/Source/gps/: Probe.cpp  UartGpsDevice.cpp
HalModule/Source/i2c/: EspI2cBus.cpp
HalModule/Source/input/: GpioKeyboardDevice.cpp
HalModule/Source/power/: AdcPowerDevice.cpp
HalModule/Source/sdcard/: SpiSdCardDevice.cpp
HalModule/Source/spi/: EspSpiBus.cpp
HalModule/Source/touch/: LgfxTouchDevice.cpp
HalModule/Source/uart/: EspUartBus.cpp
HalModule/Source/usb/: TinyUsbDevice.cpp
Profiles/: CMakeLists.txt  profile_check.c  schema.yaml
Profiles/_bases/: base-esp32-spi.yaml  base-headless.yaml
Profiles/custom/: Config.hpp
Profiles/cyd-2432s028r/: Config.hpp  profile.yaml
Profiles/cyd-2432s028r/Source/hwd/: GeneratedInit.cpp
Profiles/esp32s3-ili9341-xpt/: Config.hpp  profile.yaml
Profiles/esp32s3-ili9341-xpt/Source/hwd/: GeneratedInit.cpp
Profiles/generic-esp32/: Config.hpp  profile.yaml
Profiles/generic-esp32/Source/hwd/: GeneratedInit.cpp
Profiles/generic-esp32s3/: Config.hpp  profile.yaml
Profiles/generic-esp32s3/Source/hwd/: GeneratedInit.cpp
Profiles/lilygo-t-hmi/: CMakeLists.txt  profile.yaml
Profiles/lilygo-t-hmi/Source/hwd/: GeneratedInit.cpp
Profiles/no-profile/: Config.hpp
Profiles/simulator/mocks/: esp_err.h  esp_log.h  nvs_flash.h  storage_mocks.h
Profiles/simulator/mocks/freertos/: freertos.h
System/: CMakeLists.txt
System/Include/flx/system/: SystemManager.hpp
System/Source/: SystemManager.cpp
System/Source/device/: DeviceProfiles.cpp
System/Source/managers/: DisplayManager.cpp  NotificationManager.cpp  PowerManager.cpp  SettingsManager.cpp  ThemeManager.cpp  TimeManager.cpp
System/Source/services/: CliService.cpp  DeviceProfileService.cpp  FileSystemService.cpp  HalInitService.cpp  ScreenshotService.cpp  SdCardService.cpp  SystemInfoService.cpp
UI/: CMakeLists.txt
UI/Include/flx/ui/: GuiTask.hpp  LvglBridgeHelpers.hpp  LvglObserverBridge.hpp
UI/Source/app/: AppContext.cpp  AppManager.cpp  AppRegistry.cpp
UI/Source/components/: FileBrowser.cpp
UI/Source/desktop/: Desktop.cpp  README.md
UI/Source/desktop/window_manager/: WindowManager.cpp
UI/Source/keyboard/: VirtualKeyboard.cpp
UI/Source/managers/: FocusManager.cpp
UI/Source/tasks/: GuiTask.cpp
UI/Source/theming/: StyleStore.cpp  ThemeLoader.cpp  ThemeRegistry.cpp  UiThemeManager.cpp
UI/Source/theming/theme_engine/: ThemeEngine.cpp
UI/Source/theming/themes/: Themes.cpp
main/: CMakeLists.txt  Kconfig.projbuild  lv_lgfx_user.hpp  lv_os_custom.c  main.cpp
main/core/: README.md
main/core/apps/: AppContext.cpp  AppContext.hpp  AppManager.cpp  AppManager.hpp  AppManifest.hpp  AppRegistry.cpp  AppRegistry.hpp  Bundle.cpp  Bundle.hpp  EventBus.cpp  EventBus.hpp  Intent.hpp
main/core/apps/calendar/: CalendarApp.cpp  CalendarApp.hpp
main/core/apps/files/: FilesApp.cpp  FilesApp.hpp
main/core/common/: ClipboardManager.hpp  Logger.hpp  Observable.hpp  Singleton.hpp  Types.hpp
main/core/connectivity/: ConnectivityManager.cpp  ConnectivityManager.hpp  README.md
main/core/services/: IService.hpp  ServiceManifest.hpp  ServiceRegistry.cpp  ServiceRegistry.hpp
main/core/system/: ClipboardManager.hpp  FocusManager.cpp  FocusManager.hpp  NotificationManager.cpp  NotificationManager.hpp  README.md  SystemManager.cpp  SystemManager.hpp  TimeManager.cpp  TimeManager.hpp
main/core/tasks/: TaskManager.cpp  TaskManager.hpp
main/core/ui/: FileChooser.hpp  LvglBridgeHelpers.hpp  LvglObserverBridge.hpp
main/core/ui/DE/: DE.cpp  (+1 more)
main/hal/display/: lv_lgfx_user.hpp
main/hal/os/: lv_os_custom.c
simulator/: CMakeLists.txt  LvglSdlHAL.cpp  lv_conf.h  main_sim.cpp
simulator/mocks/: Logger_mock.cpp  sdkconfig.h
(+277 files in other folders)
